syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_rule_input_entry;

message DsRelationRuleInputEntryBean {

     int32 id=1 ;
     optional int32 rule_id=2 ;
     optional int32 rule_input_entry_id= 3;
     optional string values_map=4 ;
     optional int32 index=5 ;
     optional string  create_time= 6;
     optional string update_time=7 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationRuleInputEntryBeanService {
  rpc ListDsRelationRuleInputEntryBeans(ListDsRelationRuleInputEntryBeansRequest) returns (ListDsRelationRuleInputEntryBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationRuleInputEntryBeans"
    };
  }

  rpc GetDsRelationRuleInputEntryBean(GetDsRelationRuleInputEntryBeanRequest) returns (DsRelationRuleInputEntryBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationRuleInputEntryBeans/*}"
    };
  }

  rpc CreateDsRelationRuleInputEntryBean(CreateDsRelationRuleInputEntryBeanRequest) returns (DsRelationRuleInputEntryBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationRuleInputEntryBeans"
      body: "DsRelationRuleInputEntryBean"
    };
  }

  rpc UpdateDsRelationRuleInputEntryBean(UpdateDsRelationRuleInputEntryBeanRequest) returns (DsRelationRuleInputEntryBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationRuleInputEntryBean.name=DsRelationRuleInputEntryBeans/*}"
      body: "DsRelationRuleInputEntryBean"
    };
  }

  rpc DeleteDsRelationRuleInputEntryBean(DeleteDsRelationRuleInputEntryBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationRuleInputEntryBeans/*}"
    };
  }
}

// message DsRelationRuleInputEntryBean {
// ! This should be defined elsewhere
// }

message ListDsRelationRuleInputEntryBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationRuleInputEntryBeansResponse {
  // The field name should match the noun "DsRelationRuleInputEntryBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationRuleInputEntryBean DsRelationRuleInputEntryBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationRuleInputEntryBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationRuleInputEntryBeanRequest {
  // The parent resource name where the DsRelationRuleInputEntryBean is to be created.
  string parent = 1;

  // The DsRelationRuleInputEntryBean id to use for this DsRelationRuleInputEntryBean.
  string DsRelationRuleInputEntryBean_id = 2;

  // The DsRelationRuleInputEntryBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationRuleInputEntryBean DsRelationRuleInputEntryBean = 3;
}

message UpdateDsRelationRuleInputEntryBeanRequest {
  // The DsRelationRuleInputEntryBean resource which replaces the resource on the server.
  DsRelationRuleInputEntryBean DsRelationRuleInputEntryBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationRuleInputEntryBeanRequest {
  // The resource name of the DsRelationRuleInputEntryBean to be deleted.
  string name = 1;
}
